# snapchange

./: Cargo.toml
src/: cmdline.rs  fuzzvm.rs  lib.rs  memory.rs  segment.rs  stack_unwinder.rs  stats.rs
src/commands/: coverage.rs  find_input.rs  fuzz.rs  trace.rs
