[package]
name = "snapchange"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vmm-sys-util = "0.12.1"
kvm-bindings = { version = "0.7.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.16.0"
anyhow = "1.0.40"
libc = "0.2.98"
bitflags = "2.4.2"
x86_64 = { version = "0.14.10", default-features = false, features = [
  "instructions",
] }
clap = { version = "4.1.8", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-hex = "0.1.0"
nix = "0.27.1"
iced-x86 = "1.13.0"
thiserror = "1.0"
ctrlc = "3.2.0"
core_affinity = "0.8.1"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.11.0"
clap-verbosity-flag = "2.0"
rand = "0.8"
rand_core = "0.6"
ahash = "0.8"

# For addr2line implementation 
addr2line = "0.21.0"
memmap = "0.7"
object = { version = "0.32.2", default-features = false, features = [
  "read",
], optional = true }

# For MSRs to/from primitive
num_enum = "0.7.2"

# For stats TUI
tui = "0.19.0"
crossterm = "0.27.0"
tui-logger = "0.8.1"
toml = "0.8.8"

[profile.release]
debug = true
incremental = true

[features]
default = []
redqueen = []
